# InvenTree

plugins/: README.md  pyproject.toml
plugins/assembly_hierarchy/: __init__.py
plugins/assembly_hierarchy/static/plugins/assembly-hierarchy/: panel.js
plugins/assembly_hierarchy/templates/assembly_hierarchy/: hierarchy.html  index.html  panel.html  tree.html
plugins/product_tree/: __init__.py
plugins/product_tree/static/product_tree/: tree.js
plugins/product_tree/templates/product_tree/: home.html  tree.html
src/backend/InvenTree/common/setting/: system.py  tests.py
src/backend/InvenTree/data_exporter/: mixins.py
src/backend/InvenTree/plugin/base/integration/: DataExport.py
