
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-product-tree-plugin"
version = "0.1.0"
description = "Visualize an InvenTree part's BOM hierarchy as a graph"
authors = [{name="ChatGPT"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.urls]
homepage = "https://example.com"
